--- a/src/styles/pages/Index.css
+++ b/src/styles/pages/Index.css
@@ -231,7 +231,7 @@
     margin-bottom: 1rem;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    /* -webkit-line-clamp: 2; */
     -webkit-box-orient: vertical;
   }
   
